# Ariadne

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
design/: 00-overview.md  01-architecture.md  02-command-api.md  03-schema-cache.md  04-autocomplete.md  05-query-execution.md  06-connections-security.md  07-frontend.md  08-testing.md  09-packaging.md  10-roadmap.md  11-phase0-refactor.md  12-phase1-plan.md  13-handoff.md  14-gui-feedback-backlog.md  15-gui-backlog-plan.md  16-user-flows.md  17-scenario-plan.md  18-explorer-nav-plan.md  19-polish-edit-plan.md  20-grid-format-stats-plan.md
docs/: architecture.md  backend.md  frontend.md  ipc-api.md  release.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/cache/: catalog.rs  mod.rs  snapshot.rs
src-tauri/src/commands/: activity.rs  complete.rs  connect.rs  details.rs  edit.rs  files.rs  mod.rs  profile.rs  query.rs  roles.rs  schema.rs
src-tauri/src/complete/: candidates.rs  context.rs  lexer.rs  mod.rs
src-tauri/src/db/: classify.rs  exec.rs  mod.rs  pool.rs  rows.rs  types.rs
src-tauri/src/profiles/: mod.rs
src/components/activity/: ActivityPanel.tsx
src/components/connection/: ConnectionMenu.tsx  ProfileDialog.tsx  RoBadge.tsx
src/components/editor/: ObjectInfoPanel.tsx  SqlEditor.tsx
src/components/explorer/: ContextBar.tsx  Explorer.tsx  NodeRow.tsx  PeekPanel.tsx  QuickActionMenu.tsx  icons.tsx  tree.ts
src/components/grid/: CellDialog.tsx  ResultGrid.tsx
src/components/history/: QueryHistory.tsx
src/components/layout/: CommandPalette.tsx  ResizeHandle.tsx  SettingsDialog.tsx  StatusBar.tsx  Toolbar.tsx
src/components/query/: CloseTabDialog.tsx  ConfirmDialog.tsx  ConnectionClosedBanner.tsx  EmptyStateCard.tsx  ResultArea.tsx  ResultView.tsx  SaveTabDialog.tsx  TabBar.tsx
src/components/roles/: RolesPanel.tsx
src/components/sidebar/: Sidebar.tsx
src/components/ui/: button.tsx  dialog.tsx  input.tsx
src/lib/: activityQuery.ts  api.ts  cellEdit.ts  clipboard.ts  connectionActions.ts  editorRun.ts  errors.ts  events.ts  fileActions.ts  format.ts  fuzzy.ts  monaco-setup.ts  sessionResume.ts  shortcuts.ts  updater.ts  utils.ts
src/lib/monaco/: providers.ts
src/stores/: connectionStore.ts  historyStore.ts  schemaStore.ts  tabsStore.ts  uiStore.ts
