[package]
name = "ariadne"
version = "0.0.0"
description = "Local-first PostgreSQL IDE"
authors = ["Kerem"]
edition = "2021"
rust-version = "1.77"

# Tauri v2 masaüstü uygulaması: tek binary (src/main.rs).
[[bin]]
name = "ariadne"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — DB I/O tamamen async (design 01 §2).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# PostgreSQL erişimi. Windows'ta build sürtünmesini azaltmak için TLS = native-tls
# (SChannel kullanır; rustls/ring'in Perl+NASM gereksinimini getirmez). default-features
# kapalı: compile-time query makrolarını (DATABASE_URL gerektirir) İSTEMİYORUZ.
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
] }

# Gerçek Postgres parser (design 00 §3). libpg_query C kaynağını derler → MSVC gerekir.
# M0'ın asıl amacı: bunun Windows'ta derlendiğini kanıtlamak (design 10, gün-1 riski).
pg_query = "6"

uuid = { version = "1", features = ["v4"] }

[profile.dev]
# Geliştirmede daha hızlı link.
incremental = true
