[package]
name = "ariadne"
version = "0.0.0"
description = "Local-first PostgreSQL IDE"
authors = ["Kerem"]
edition = "2021"
rust-version = "1.77"

# Kütüphane hedefi (design 11 §R1): iş mantığı burada, integration testler
# `use ariadne::...` ile buradan import eder. Farklı ad (`ariadne_lib`) Windows'ta
# bin ile çıktı dosyası çakışmasını önler; integration testler bu adı kullanır.
[lib]
name = "ariadne_lib"
path = "src/lib.rs"

# Tauri v2 masaüstü uygulaması: ince binary (src/main.rs → ariadne_lib::run).
[[bin]]
name = "ariadne"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — DB I/O tamamen async (design 01 §2).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# PostgreSQL erişimi. Windows'ta build sürtünmesini azaltmak için TLS = native-tls
# (SChannel kullanır; rustls/ring'in Perl+NASM gereksinimini getirmez). default-features
# kapalı: compile-time query makrolarını (DATABASE_URL gerektirir) İSTEMİYORUZ.
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
] }

# Gerçek Postgres parser (design 00 §3). libpg_query C kaynağını derler → MSVC gerekir.
# M0'ın asıl amacı: bunun Windows'ta derlendiğini kanıtlamak (design 10, gün-1 riski).
pg_query = "6"

uuid = { version = "1", features = ["v4"] }

# Şema cache: immutable snapshot + lock'suz okuma (design 03 §5).
arc-swap = "1"
smallvec = "1"
# Cache lookup indeksleri / running query haritası.
dashmap = "6"
# fetched_at zaman damgası + "cache: 2 dk önce" göstergesi.
chrono = { version = "0.4", features = ["serde"] }
# OS keychain — Windows Credential Manager öncelikli (design 06 §2).
keyring = { version = "3", features = ["windows-native"] }

[profile.dev]
# Geliştirmede daha hızlı link.
incremental = true
